# myinventory

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
deploy/: README.md  crontab.example  myinventory.service  myinventory.timer
docs/: architecture.md  configuration.md  contributing.md  data-model.md  discovery.md  enrichment.md  operations.md  output-formats.md  roadmap.md  security.md  tutorial.md  usage.md
docs/adr/: 0001-agentless-architecture.md  0002-plugin-registries.md  0003-d2-and-markdown-output.md  0004-threads-not-async.md  README.md
examples/: inventory.example.yaml
fixtures/: inventory.json
src/myinventory/: __init__.py  __main__.py  cli.py  config.py  lock.py  logsetup.py  ratelimit.py  timeutil.py
src/myinventory/discovery/: __init__.py  _sweep.py  arp.py  base.py  icmp.py  nmap.py  tcp.py
src/myinventory/enrich/: __init__.py  base.py  classify.py  dns.py  fingerprint.py  oui.py  snmp.py
src/myinventory/history/: __init__.py  changelog.py  diff.py  stale.py
src/myinventory/models/: __init__.py  host.py  inventory.py  network.py  service.py  software.py  vm.py
src/myinventory/notify/: __init__.py  base.py  dispatch.py  email.py  webhook.py
src/myinventory/pipeline/: __init__.py  orchestrator.py
src/myinventory/render/: __init__.py  d2.py  html.py  markdown.py
src/myinventory/services/: __init__.py  base.py
src/myinventory/services/probes/: __init__.py  banner.py  signatures.py
src/myinventory/ssh/: __init__.py  commands.py  inspector.py  parsers.py  transport.py
src/myinventory/storage/: __init__.py  repository.py
src/myinventory/virtualization/: __init__.py  base.py  libvirt.py  proxmox.py  vmware.py
tests/: test_config.py  test_config_m6.py  test_discovery.py  test_enrichment.py  test_history.py  test_html.py  test_integration_lab.py  test_lock.py  test_model_and_render.py  test_notify.py  test_signatures.py  test_ssh_inspection.py  test_storage.py  test_virtualization.py
tests/fixtures/: inventory.json
